fix: fixes + performance optimization